# grad-notes

./: .buildinfo  .gitignore  Dockerfile  README.md  auto-build.sh  build.py  deploy.py  genindex.html  intro.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: binder.yaml  trigger_thebe.yaml
_sources/: intro.ipynb
_sources/mth-531/chap-III_1/: intro.ipynb
_sources/mth-531/pre-reqs/: intro.ipynb
_static/: custom.css
binder/: Dockerfile
misc/: plotly_test.ipynb
mth-531/: intro.html
mth-531/chap-III_1/: intro.html
mth-531/pre-reqs/: intro.html
scripts/: trigger_binder.py
source/: _config.yml  _toc.yml  imports.py  intro.ipynb
source/_build/.doctrees/: about.doctree  environment.pickle  intro.doctree
source/_build/.doctrees/mth-531/: intro.doctree  pre-reqs.doctree
source/_build/.doctrees/tikz/: intro.doctree
source/_build/html/: about.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
source/_build/html/_sources/: about.ipynb  intro.ipynb
source/_build/html/_sources/mth-531/: intro.ipynb
source/_build/html/mth-531/: intro.html  pre-reqs.html
source/_build/html/tikz/: intro.html
source/_build/jupyter_execute/: about.ipynb  intro.ipynb
source/_build/jupyter_execute/mth-531/: intro.ipynb  pre-reqs.ipynb
source/_static/: custom.css
source/mth-531/: imports.py  intro.ipynb  pre-reqs.ipynb
source/mth-531/chap-III_1/: imports.py  intro.ipynb
source/mth-531/pre-reqs/: imports.py  intro.ipynb
source/utils/: render_utils.py
source/utils/manim_utils/: logo.py
(+8 files in other folders)
